--- a/FirstApplication/app/src/main/res/menu/menu_my.xml
+++ b/FirstApplication/app/src/main/res/menu/menu_my.xml
@@ -2,9 +2,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.ranichol.firstapplication.MyActivity">
+
+    <item
+        android:id="@+id/action_email"
+        android:icon="@android:drawable/ic_dialog_email"
+        android:title="@string/action_email"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/action_map"
+        android:icon="@android:drawable/ic_dialog_map"
+        android:title="@string/action_map"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/action_new"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/action_new"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+
 </menu>
